ghc-4335c07/testsuite/tests/overloadedrecflds/should_fail/OverloadedRecFldsFail11_A.hs
{-# LANGUAGE DuplicateRecordFields #-}
module OverloadedRecFldsFail11_A where

{-# WARNING foo "Warning on a record field" #-}
data S = MkS { foo :: Bool }
data T = MkT { foo :: Int }
